deploy-as-code/egov-deployer/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superset
  namespace: egov
  annotations:
    nginx.ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header X-Forwarded-Port $server_port;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType:
            backend:
              service:
                name: superset
                port:
                  number: 8080
